<resources>
    <string name="app_name">Selfie_app</string>
    <string name="welcome">Selfie\nEveryday</string>
    <string name="newPas">Enter new password</string>
    <string name="againPas">Enter the password again</string>
    <string name="enterPas">Enter password</string>
    <string name="buttonSave">Save</string>
    <string name="buttonEnter">Enter</string>
    <string name="smallText">Keep funny moments</string>
    <string name="done">Done</string>
    <string name="waiting">Waiting</string>
    <string name="title_activity_create_event">CreateEventActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="aboutAdded">About photo</string>
    <string name="diary_notification_channel_name">Diary Notification</string>
    <string name="diary_notification_channel_description">Publish notifications from diaries</string>
    <string name="title_activity_open_photo">OpenPhotoActivity</string>
</resources>
