<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/colorPrimaryDark"
    tools:context=".CreatePasswordActivity">

    <TextView
        android:id="@+id/program_name"
        android:layout_width="wrap_content"
        android:layout_height="254dp"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="-80dp"
        android:fontFamily="cursive"
        android:gravity="top|center"
        android:paddingTop="20dp"
        android:text="@string/welcome"
        android:textColor="@color/colorAccent"
        android:textSize="80sp"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/newPas"
        android:textColorHint="@color/colorPrimary"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/againPas"
        android:textColorHint="@color/colorPrimary"/>

    <Button
        android:id="@+id/button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/buttonSave"
        android:background="@color/colorText"
        android:layout_gravity="center"/>

</LinearLayout>