<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".dialog.EnterPasswordDialog">

    <TextView
        android:id="@+id/program_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:fontFamily="cursive"
        android:gravity="top|center"
        android:paddingTop="20dp"
        android:text="@string/welcome"
        android:textColor="@color/colorAccent"
        android:textSize="60sp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"/>

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enterPas"
        android:inputType="textPassword"
        android:textColorHint="@color/colorPrimary"/>

    <Button
        android:id="@+id/btnEnter"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorText"
        android:gravity="center"
        android:text="@string/buttonEnter"/>

</LinearLayout>