<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activity.EnterPasswordActivity">

    <TextView
        android:id="@+id/program_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:fontFamily="cursive"
        android:gravity="top|center"
        android:paddingTop="20dp"
        android:text="@string/welcome"
        android:textColor="@color/colorAccent"
        android:textSize="80sp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enterPas"
        android:imeOptions="actionGo"
        android:inputType="textPassword"
        android:textColorHint="@color/colorPrimary"
        android:fontFamily="@font/roboto"/>

    <Button
        android:id="@+id/btnEnter"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorText"
        android:gravity="center"
        android:onClick="btnEnterClick"
        android:text="@string/buttonEnter"
        android:fontFamily="@font/roboto"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnRemovePassword"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Reset password"
            android:fontFamily="@font/roboto"
            />

        <Button
            android:id="@+id/btnCancel"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Cancel"
            android:fontFamily="@font/roboto"/>

    </LinearLayout>

</LinearLayout>